// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input add className 1`] = `
<input
  className="css-f0vu9v-inputStyles-inputClass foo"
  defaultValue=""
  onChange={[Function]}
  type="text"
/>
`;

exports[`Input empty 1`] = `
<input
  className="css-f0vu9v-inputStyles-inputClass"
  defaultValue=""
  onChange={[Function]}
  type="text"
/>
`;
